# learning-path-repo

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
ai-service/tests/: test_models.py  test_services.py
api/: main.py
api/dependencies/: dependency_injection.py  use_case_factory.py
api/middleware/: error_handler.py  logging_middleware.py  performance_middleware.py
api/routers/: analyze_router.py  health_router.py  learning_path_router.py  override_router.py  progress_router.py  repository_router.py  scan_router.py
api/schemas/: analyze_schemas.py  error_schemas.py  learning_path_schemas.py  override_schemas.py  progress_schemas.py  repository_schemas.py  scan_schemas.py
application/dto/: learning_path_request.py  learning_path_response.py  milestone_group.py
application/services/: graph_builder.py  milestone_grouper.py  override_manager.py  path_generator_service.py  topological_sorter.py
application/use_cases/: generate_learning_path_use_case.py
backend/config/: logging_config.py  settings.py
docs/api/: endpoints.md  schemas.md
docs/api-reference/: ai-service-api.md
docs/architecture/: clean_architecture.md  system-overview.md  system_design.md
docs/deployment/: docker.md  scaling-strategies.md  setup.md
docs/technical-guides/: ai-integration.md
docs/tutorials/: ai-model-integration.md  custom-analyzers.md  quick-start.md
docs/user_guide/: features.md  getting_started.md
domain/entities/: dependency_relation.py  learning_node.py  learning_path.py  progress_record.py  repository.py  skill.py  topic.py
domain/exceptions/: __init__.py  domain_exceptions.py
domain/value_objects/: __init__.py  repository_metadata.py
frontend/: package.json  vite.config.ts
frontend/src/: App.jsx
infrastructure/graph/: circular_dependency_resolver.py  dependency_graph.py  graph_algorithms.py  knowledge_graph.py
infrastructure/logging/: __init__.py  structured_logger.py
infrastructure/rag/: __init__.py  chunker.py  rag_pipeline.py  vector_store.py
infrastructure/scanner/: ast_parser.py  file_system_abstraction.py  language_detector.py  scanner_config.py
tests/unit/: test_entities.py
(+88 files in other folders)
